[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossping"
version = "0.1.0"
description = "Desktop MQTT drawing overlay for shared screen annotation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "CrossPing" }
]
dependencies = []

[project.optional-dependencies]
desktop = [
  "paho-mqtt>=2.1,<3",
  "PySide6>=6.7,<7",
  "pynput>=1.7,<2",
]
dev = [
  "pytest>=8.2,<9",
  "pytest-qt>=4.4,<5",
  "PyInstaller>=6.10,<7",
]

[project.scripts]
crossping = "crossping.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
